// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application should not fail if current route does not exist 1`] = `
<div
  class="root"
>
  <nav
    class="navigation"
  >
    <div
      class="navigation"
    >
      <div
        class="header"
      >
        <div
          class="headerContent"
        >
          <span
            aria-label="su-sulu"
            class="headerIcon su-sulu"
          />
          <span
            class="headerTitle"
          >
            Sulu
          </span>
        </div>
      </div>
      <div
        class="user"
      >
        <div
          class="userContent"
        >
          <div
            class="noUserImage"
          >
            <span
              aria-label="fa-user"
              class="fa fa-user"
            />
          </div>
          <div
            class="userProfile"
          >
            <span>
              Hikaru Sulu
            </span>
            <button>
              <span
                aria-label="su-exit"
                class="su-exit"
              />
              Log out
            </button>
          </div>
        </div>
      </div>
      <div
        class="items"
      />
      <div
        class="versions"
      >
        <div>
          Sulu (
          <a
            href="https://github.com/sulu/sulu/releases"
            target="_blank"
          >
            2.0.0-RC1
          </a>
          )
        </div>
      </div>
    </div>
  </nav>
  <div
    class="content"
  >
    <main
      class="main"
    >
      <header
        class="header"
      >
        <nav
          class="toolbar light"
        >
          <div
            class="controls light"
          >
            <button
              class="button light primary"
            >
              <span
                aria-label="su-menu"
                class="icon su-menu"
              />
            </button>
          </div>
          <div
            class="controls light"
          />
        </nav>
      </header>
      <div
        class="viewContainer"
      />
    </main>
  </div>
</div>
`;

exports[`Application should render based on current route 1`] = `
<div
  class="root"
>
  <nav
    class="navigation"
  >
    <div
      class="navigation"
    >
      <div
        class="header"
      >
        <div
          class="headerContent"
        >
          <span
            aria-label="su-sulu"
            class="headerIcon su-sulu"
          />
          <span
            class="headerTitle"
          >
            Sulu
          </span>
        </div>
      </div>
      <div
        class="user"
      >
        <div
          class="userContent"
        >
          <div
            class="noUserImage"
          >
            <span
              aria-label="fa-user"
              class="fa fa-user"
            />
          </div>
          <div
            class="userProfile"
          >
            <span>
              Hikaru Sulu
            </span>
            <button>
              <span
                aria-label="su-exit"
                class="su-exit"
              />
              Log out
            </button>
          </div>
        </div>
      </div>
      <div
        class="items"
      />
      <div
        class="versions"
      >
        <div>
          Sulu (
          <a
            href="https://github.com/sulu/sulu/releases"
            target="_blank"
          >
            2.0.0-RC1
          </a>
          )
        </div>
      </div>
    </div>
  </nav>
  <div
    class="content"
  >
    <main
      class="main"
    >
      <header
        class="header"
      >
        <nav
          class="toolbar light"
        >
          <div
            class="controls light"
          >
            <button
              class="button light primary"
            >
              <span
                aria-label="su-menu"
                class="icon su-menu"
              />
            </button>
          </div>
          <div
            class="controls light"
          />
        </nav>
      </header>
      <div
        class="viewContainer"
      >
        <div>
          <h1>
            Test
          </h1>
          <h2>
            test
          </h2>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Application should render opened navigation 1`] = `
<Application
  router={
    Object {
      "route": Object {
        "attributeDefaults": Object {},
        "children": Array [],
        "name": "test",
        "options": Object {},
        "parent": null,
        "path": "/webspaces",
        "rerenderAttributes": Array [],
        "view": "test",
      },
    }
  }
>
  <div
    className="root navigationVisible"
  >
    <nav
      className="navigation"
    >
      <Navigation
        onNavigate={[Function]}
        router={
          Object {
            "route": Object {
              "attributeDefaults": Object {},
              "children": Array [],
              "name": "test",
              "options": Object {},
              "parent": null,
              "path": "/webspaces",
              "rerenderAttributes": Array [],
              "view": "test",
            },
          }
        }
      >
        <Navigation
          onLogoutClick={[Function]}
          onProfileClick={[Function]}
          suluVersion="2.0.0-RC1"
          suluVersionLink="https://github.com/sulu/sulu/releases"
          title="Sulu"
          username="Hikaru Sulu"
        >
          <div
            className="navigation"
          >
            <div
              className="header"
            >
              <div
                className="headerContent"
              >
                <Icon
                  className="headerIcon"
                  name="su-sulu"
                >
                  <span
                    aria-label="su-sulu"
                    className="headerIcon su-sulu"
                  />
                </Icon>
                <span
                  className="headerTitle"
                >
                  Sulu
                </span>
              </div>
            </div>
            <div
              className="user"
            >
              <div
                className="userContent"
              >
                <div
                  className="noUserImage"
                  onClick={[Function]}
                >
                  <Icon
                    name="fa-user"
                  >
                    <span
                      aria-label="fa-user"
                      className="fa fa-user"
                    />
                  </Icon>
                </div>
                <div
                  className="userProfile"
                >
                  <span
                    onClick={[Function]}
                  >
                    Hikaru Sulu
                  </span>
                  <button
                    onClick={[Function]}
                  >
                    <Icon
                      name="su-exit"
                    >
                      <span
                        aria-label="su-exit"
                        className="su-exit"
                      />
                    </Icon>
                    Log out
                  </button>
                </div>
              </div>
            </div>
            <div
              className="items"
            />
            <div
              className="versions"
            >
              <div>
                Sulu (
                <a
                  href="https://github.com/sulu/sulu/releases"
                  target="_blank"
                >
                  2.0.0-RC1
                </a>
                )
              </div>
            </div>
          </div>
        </Navigation>
      </Navigation>
    </nav>
    <div
      className="content"
    >
      <Backdrop
        fixed={false}
        local={true}
        onClick={[Function]}
        open={true}
        visible={false}
      >
        <div
          className="backdrop"
          onClick={[Function]}
        />
      </Backdrop>
      <main
        className="main"
      >
        <header
          className="header"
        >
          <Toolbar
            navigationOpen={true}
            onNavigationButtonClick={[Function]}
          >
            <Toolbar
              skin="light"
            >
              <nav
                className="toolbar light"
              >
                <Controls
                  key=".0"
                  skin="light"
                >
                  <div
                    className="controls light"
                  >
                    <Button
                      active={false}
                      disabled={false}
                      hasOptions={false}
                      icon="su-x"
                      key=".0"
                      onClick={[Function]}
                      primary={true}
                      skin="light"
                    >
                      <button
                        className="button light primary"
                        disabled={false}
                        onClick={[Function]}
                      >
                        <Icon
                          className="icon"
                          name="su-x"
                        >
                          <span
                            aria-label="su-x"
                            className="icon su-x"
                          />
                        </Icon>
                      </button>
                    </Button>
                  </div>
                </Controls>
                <Controls
                  key=".1"
                  skin="light"
                >
                  <div
                    className="controls light"
                  />
                </Controls>
              </nav>
            </Toolbar>
          </Toolbar>
        </header>
        <div
          className="viewContainer"
        >
          <Test
            key="test"
            router={
              Object {
                "route": Object {
                  "attributeDefaults": Object {},
                  "children": Array [],
                  "name": "test",
                  "options": Object {},
                  "parent": null,
                  "path": "/webspaces",
                  "rerenderAttributes": Array [],
                  "view": "test",
                },
              }
            }
          >
            <div>
              <h1>
                Test
              </h1>
              <h2>
                test
              </h2>
            </div>
          </Test>
        </div>
      </main>
      <Sidebar
        className="sidebar"
      />
    </div>
  </div>
</Application>
`;
